--- a/src/EcTranslators/EcTranslators.csproj
+++ b/src/EcTranslators/EcTranslators.csproj
@@ -187,13 +187,13 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Condition="('$(OS)'=='Windows_NT')">
-      <Version>7.0.0-preview.6.22324.4</Version>
+      <Version>7.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Condition="('$(OS)'=='Windows_NT')">
-      <Version>7.0.0-preview.6.22324.4</Version>
+      <Version>7.0.3</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Condition="('$(OS)'=='Windows_NT')">
-      <Version>7.0.0-preview.6.22330.3</Version>
+      <Version>7.0.3</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Condition="('$(OS)'=='Windows_NT')">
       <Version>13.0.2</Version>
@@ -205,13 +205,13 @@
       <Version>4.5.5</Version>
     </PackageReference>
     <PackageReference Include="System.Net.Http.WinHttpHandler" Condition="('$(OS)'=='Windows_NT')">
-      <Version>7.0.0-preview.6.22324.4</Version>
+      <Version>7.0.0</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Condition="('$(OS)'=='Windows_NT')">
       <Version>7.0.0-preview.2.22152.2</Version>
     </PackageReference>
     <PackageReference Include="System.Text.Json" Condition="('$(OS)'=='Windows_NT')">
-      <Version>7.0.0-preview.6.22324.4</Version>
+      <Version>7.0.2</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
