--- a/src/EcTranslators/EcTranslators.csproj
+++ b/src/EcTranslators/EcTranslators.csproj
@@ -91,6 +91,7 @@
     <Compile Include="BingTranslator\QueryForAzureKeyAndLocation.Designer.cs">
       <DependentUpon>QueryForAzureKeyAndLocation.cs</DependentUpon>
     </Compile>
+    <Compile Include="Common.cs" />
     <Compile Include="DeepLTranslator\DeepLTranslatorEncConverterConfig.cs" Condition="('$(OS)'=='Windows_NT')" />
     <Compile Include="DeepLTranslator\DeepLTranslatorAutoConfigDialog.cs" Condition="('$(OS)'=='Windows_NT')">
       <SubType>Form</SubType>
@@ -132,6 +133,12 @@
     </Compile>
     <Compile Include="GoogleTranslator\GoogleTranslatorEncConverter.cs" />
     <Compile Include="GoogleTranslator\GoogleTranslatorEncConverterConfig.cs" />
+    <Compile Include="GoogleTranslator\QueryForGoogleCredentials.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GoogleTranslator\QueryForGoogleCredentials.Designer.cs">
+      <DependentUpon>QueryForGoogleCredentials.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -164,9 +171,16 @@
     <EmbeddedResource Include="DeepLTranslator\QueryForDeepLKey.resx" Condition="('$(OS)'=='Windows_NT')">
       <DependentUpon>QueryForDeepLKey.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GoogleTranslator\GoogleTranslatorAutoConfigDialog.resx">
+      <DependentUpon>GoogleTranslatorAutoConfigDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GoogleTranslator\QueryForGoogleCredentials.resx">
+      <DependentUpon>QueryForGoogleCredentials.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -186,6 +200,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Google.Cloud.Translation.V2">
+      <Version>3.2.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration" Condition="('$(OS)'=='Windows_NT')">
       <Version>7.0.0</Version>
     </PackageReference>
@@ -196,7 +213,7 @@
       <Version>7.0.3</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Condition="('$(OS)'=='Windows_NT')">
-      <Version>13.0.2</Version>
+      <Version>13.0.3</Version>
     </PackageReference>
     <PackageReference Include="System.ComponentModel.Annotations" Condition="('$(OS)'=='Windows_NT')">
       <Version>6.0.0-preview.4.21253.7</Version>
