changed common method class from 'Common' to 'EcTranslatorUtils' and made it internal

--- a/src/EcTranslators/EcTranslators.csproj
+++ b/src/EcTranslators/EcTranslators.csproj
@@ -91,7 +91,7 @@
     <Compile Include="BingTranslator\QueryForAzureKeyAndLocation.Designer.cs">
       <DependentUpon>QueryForAzureKeyAndLocation.cs</DependentUpon>
     </Compile>
-    <Compile Include="Common.cs" />
+    <Compile Include="EcTranslatorUtils.cs" />
     <Compile Include="DeepLTranslator\DeepLTranslatorEncConverterConfig.cs" Condition="('$(OS)'=='Windows_NT')" />
     <Compile Include="DeepLTranslator\DeepLTranslatorAutoConfigDialog.cs" Condition="('$(OS)'=='Windows_NT')">
       <SubType>Form</SubType>
