add a menuItem to the Settings menu to hide the source text and the ability to make the editable target text box read-only (for those situations where the person doesn't have edit privilege, and may just want to see the BT generated)

--- a/src/BackTranslationHelper/app.config
+++ b/src/BackTranslationHelper/app.config
@@ -24,6 +24,9 @@
       <setting name="PinnedToTop" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="HideSourceText" serializeAs="String">
+        <value>False</value>
+      </setting>
     </BackTranslationHelper.Properties.Settings>
   </userSettings>
 </configuration>
