--- a/src/BackTranslationHelper/Properties/Settings.settings
+++ b/src/BackTranslationHelper/Properties/Settings.settings
@@ -29,5 +29,8 @@
     <Setting Name="PinnedToTop" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="HideSourceText" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
