--- a/src/TestEncCnvtrs/app.config
+++ b/src/TestEncCnvtrs/app.config
@@ -12,7 +12,7 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="System.Text.Json" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-7.0.0.3" newVersion="7.0.0.3" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
@@ -24,7 +24,7 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.Extensions.Http.Polly" publicKeyToken="adb9793829ddae60" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-7.0.10.0" newVersion="7.0.10.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.Bcl.AsyncInterfaces" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
@@ -35,20 +35,32 @@
 				<bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
 			</dependentAssembly>
 			<dependentAssembly>
-				<assemblyIdentity name="Google.Apis.Auth" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-1.60.0.0" newVersion="1.60.0.0" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="Google.Apis.Core" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-1.60.0.0" newVersion="1.60.0.0" />
+				<assemblyIdentity name="Microsoft.Extensions.DependencyInjection.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Google.Apis" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-1.60.0.0" newVersion="1.60.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-1.61.0.0" newVersion="1.61.0.0" />
 			</dependentAssembly>
 			<dependentAssembly>
-				<assemblyIdentity name="Google.Api.Gax" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-4.3.1.0" newVersion="4.3.1.0" />
+				<assemblyIdentity name="Google.Apis.Auth" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-1.61.0.0" newVersion="1.61.0.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Google.Apis.Core" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-1.61.0.0" newVersion="1.61.0.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Google.Apis.Translate.v2" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-1.61.0.875" newVersion="1.61.0.875" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Google.Api.Gax" publicKeyToken="3ec5ea7f18953e47" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.4.0.0" newVersion="4.4.0.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Google.Api.Gax.Rest" publicKeyToken="3ec5ea7f18953e47" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.4.0.0" newVersion="4.4.0.0" />
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
