--- a/src/EcTranslators/app.config
+++ b/src/EcTranslators/app.config
@@ -23,8 +23,16 @@
 				<bindingRedirect oldVersion="0.0.0.0-7.0.0.3" newVersion="7.0.0.3" />
 			</dependentAssembly>
 			<dependentAssembly>
+				<assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-7.0.0.2" newVersion="7.0.0.2" />
+			</dependentAssembly>
+			<dependentAssembly>
 				<assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-4.0.1.2" newVersion="4.0.1.2" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Memory.Data" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.Extensions.Logging.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
@@ -32,7 +40,7 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.Extensions.Http.Polly" publicKeyToken="adb9793829ddae60" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-7.0.10.0" newVersion="7.0.10.0" />
+				<bindingRedirect oldVersion="0.0.0.0-7.0.13.0" newVersion="7.0.13.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.Bcl.AsyncInterfaces" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
@@ -48,19 +56,19 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Google.Apis" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-1.61.0.0" newVersion="1.61.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-1.62.1.0" newVersion="1.62.1.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Google.Apis.Auth" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-1.61.0.0" newVersion="1.61.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-1.62.1.0" newVersion="1.62.1.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Google.Apis.Core" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-1.61.0.0" newVersion="1.61.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-1.62.1.0" newVersion="1.62.1.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Google.Apis.Translate.v2" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-1.61.0.875" newVersion="1.61.0.875" />
+				<bindingRedirect oldVersion="0.0.0.0-1.62.0.875" newVersion="1.62.0.875" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Google.Api.Gax" publicKeyToken="3ec5ea7f18953e47" culture="neutral" />
@@ -104,6 +112,30 @@
    </setting>
    <setting name="GoogleCloudBillingProjectName" serializeAs="String">
     <value>projects/bright-coyote-381812</value>
+   </setting>
+   <setting name="AzureOpenAiEndpoint" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="AzureOpenAiDeploymentName" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="AzureOpenAiKeyOverride" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="AzureOpenAiKeyLocationDialogInstructionUrl" serializeAs="String">
+    <value>https://learn.microsoft.com/en-us/azure/ai-services/openai/how-to/create-resource</value>
+   </setting>
+   <setting name="AzureOpenAiSystemPromptAdditions" serializeAs="Xml">
+    <value>
+     <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+      <string>with a 'free translation' style</string>
+      <string>with a 'literal translation' style</string>
+      <string>with a 'free translation' style aimed at high school students</string>
+      <string>in the Devanagari script</string>
+      <string>using 'Yoda speak'</string>
+      <string>UseSystemPrompt: Translate from Hindi into English.</string>
+     </ArrayOfString>
+    </value>
    </setting>
   </SilEncConverters40.EcTranslators.Properties.Settings>
 	</userSettings>
