--- a/src/EcTranslators/AzureOpenAi/AzureOpenAiExe/packages.config
+++ b/src/EcTranslators/AzureOpenAi/AzureOpenAiExe/packages.config
@@ -1,17 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Google.Api.Gax" version="4.4.0" targetFramework="net48" />
-  <package id="Google.Api.Gax.Rest" version="4.4.0" targetFramework="net48" />
-  <package id="Google.Apis" version="1.62.1" targetFramework="net48" />
-  <package id="Google.Apis.Auth" version="1.62.1" targetFramework="net48" />
-  <package id="Google.Apis.Core" version="1.62.1" targetFramework="net48" />
-  <package id="Google.Apis.Translate.v2" version="1.62.0.875" targetFramework="net48" />
-  <package id="Google.Cloud.Translation.V2" version="3.2.0" targetFramework="net48" />
+  <package id="Azure.AI.OpenAI" version="1.0.0-beta.8" targetFramework="net48" />
+  <package id="Azure.Core" version="1.35.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="7.0.0" targetFramework="net48" />
-  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
-  <package id="NUnit" version="3.13.3" targetFramework="net48" />
-  <package id="NUnit3TestAdapter" version="4.5.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="7.0.2" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
