--- a/src/EcTranslators/EcTranslators.csproj
+++ b/src/EcTranslators/EcTranslators.csproj
@@ -76,6 +76,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AzureOpenAi\AzureOpenAiEncConverter.cs" />
+    <Compile Include="AzureOpenAi\AzureOpenAiEncConverterConfig.cs" />
+    <Compile Include="AzureOpenAi\AzureOpenAiAutoConfigDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AzureOpenAi\AzureOpenAiAutoConfigDialog.designer.cs">
+      <DependentUpon>AzureOpenAiAutoConfigDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AzureOpenAi\QueryForAzureKeyDeploymentNameAndEndpoint.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AzureOpenAi\QueryForAzureKeyDeploymentNameAndEndpoint.Designer.cs">
+      <DependentUpon>QueryForAzureKeyDeploymentNameAndEndpoint.cs</DependentUpon>
+    </Compile>
     <Compile Include="BingTranslator\BingTranslatorAutoConfigDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -163,6 +177,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="AzureOpenAi\AzureOpenAiAutoConfigDialog.resx">
+      <DependentUpon>AzureOpenAiAutoConfigDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AzureOpenAi\QueryForAzureKeyDeploymentNameAndEndpoint.resx">
+      <DependentUpon>QueryForAzureKeyDeploymentNameAndEndpoint.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="BingTranslator\BingTranslatorAutoConfigDialog.resx" />
     <EmbeddedResource Include="BingTranslator\QueryForAzureKeyAndLocation.resx">
       <DependentUpon>QueryForAzureKeyAndLocation.cs</DependentUpon>
@@ -210,7 +230,7 @@
       <Version>7.0.4</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Condition="('$(OS)'=='Windows_NT')">
-      <Version>7.0.10</Version>
+      <Version>7.0.13</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Condition="('$(OS)'=='Windows_NT')">
       <Version>13.0.3</Version>
