--- a/src/TestEncCnvtrs/app.config
+++ b/src/TestEncCnvtrs/app.config
@@ -15,8 +15,16 @@
 				<bindingRedirect oldVersion="0.0.0.0-7.0.0.3" newVersion="7.0.0.3" />
 			</dependentAssembly>
 			<dependentAssembly>
+				<assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-7.0.0.2" newVersion="7.0.0.2" />
+			</dependentAssembly>
+			<dependentAssembly>
 				<assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-4.0.1.2" newVersion="4.0.1.2" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Memory.Data" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.Extensions.Logging.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
@@ -24,7 +32,7 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.Extensions.Http.Polly" publicKeyToken="adb9793829ddae60" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-7.0.10.0" newVersion="7.0.10.0" />
+				<bindingRedirect oldVersion="0.0.0.0-7.0.13.0" newVersion="7.0.13.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.Bcl.AsyncInterfaces" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
@@ -40,19 +48,19 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Google.Apis" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-1.61.0.0" newVersion="1.61.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-1.62.1.0" newVersion="1.62.1.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Google.Apis.Auth" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-1.61.0.0" newVersion="1.61.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-1.62.1.0" newVersion="1.62.1.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Google.Apis.Core" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-1.61.0.0" newVersion="1.61.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-1.62.1.0" newVersion="1.62.1.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Google.Apis.Translate.v2" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-1.61.0.875" newVersion="1.61.0.875" />
+				<bindingRedirect oldVersion="0.0.0.0-1.62.0.875" newVersion="1.62.0.875" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Google.Api.Gax" publicKeyToken="3ec5ea7f18953e47" culture="neutral" />
